--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./src/CSS/base.css">
     <link rel="stylesheet" href="./src/CSS/login.css">
     <link rel="stylesheet" href="./src/CSS/inputs.css">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 </head>
 
 <body>
