--- a/signUp.html
+++ b/signUp.html
@@ -62,7 +62,7 @@
                     </div>
 
                     <div class="input_text">
-                        <label for="surname">Apllidos</label>
+                        <label for="surname">Apellidos</label>
                         <input title="surname" autocomplete="no" placeholder="Ej. Santamaría López" type="text" name="surname"
                             id="surname" required>
                     </div>
@@ -104,7 +104,7 @@
     <script src="src/JS/axios.min.js"></script>
 
     <script>
-        const BASE_URL = "http://192.168.1.121:8080/api"
+        const BASE_URL = "http://187.223.180.252:8080/api"
 
         function signIn(e) {
             const submit_container = document.querySelector(".submit_container");
