--- a/app/lostpets/index.html
+++ b/app/lostpets/index.html
@@ -1,37 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="../../src/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../src/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../src/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../../src/favicon/site.webmanifest">
+    <link rel="mask-icon" href="../../src/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
     <title>SOS MyPet</title>
     <link rel="stylesheet" href="../../src/CSS/base.css">
     <style>
         /* CONTENT */
         .list_container {
             display: grid;
-            grid-template-columns: repeat( auto-fit, minmax(300px, 1fr) );
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 2em;
             padding-top: 20px;
             position: relative;
             justify-content: center;
             /* padding-bottom: 20px; */
 
-            min-height: calc(100vh - 15em);
+            /* min-height: calc(100vh - 15em); */
         }
 
         .pet_card {
             position: relative;
             width: 100%;
-            height: 30em;
+            height: 40em;
             border-radius: 15px;
             /* overflow: hidden; */
             cursor: pointer;
             background-size: cover;
+            background-position: center center;
             /* background-color: red; */
             box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.2);
-
         }
 
         .pet_card::before {
@@ -91,12 +100,15 @@
 
         <mypetsos-wrapper title="Mascotas perdidas" route="lostPets">
             <div class="list_container">
-                <a :href="`../lostPetsForm/?pet=${pet.id}`" :style="`background-image: url(${baseURL}${pet.imagePath});`" v-for="pet in lostPets" class="pet_card">
+                <a @click="goToLostPetForm" :data-id="pet.id"
+                    :style="`background-image: url(${baseURL}${pet.imagePath});`" v-for="pet in lostPets"
+                    class="pet_card">
                     <div class="pet_info">
                         <h3>{{pet.name}}</h3>
                         <p>{{pet.petBreed.name}}</p>
                     </div>
-                    <button v-if="datos.curp == pet.user.curp" class="deleteBtn">x</button>
+                    <button @click="deleteLostPet" :data-id="pet.id" v-if="datos.curp == pet.user.curp || datos.role_id == 1"
+                        class="deleteBtn">x</button>
                 </a>
 
                 <a class="add-btn" href="../lostPetsForm/index.html">Subir publicación</a>
@@ -107,6 +119,7 @@
     <script src="../../src/JS/chart.js"></script>
     <script src="../../src/JS/axios.min.js"></script>
     <script src="../../src/JS/Vue.js"></script>
+    <script src="../../src/JS/sweetalert.js"></script>
     <script type="module" src="../../Template/wrapper.js"></script>
     <script>
         // axios.defaults.baseURL = 'http://192.168.1.121:8080';
@@ -121,11 +134,13 @@
                 }
             },
             methods: {
+                goToLostPetForm(e) {
+                    if (e.target == e.currentTarget) {
+                        window.location.href = `../lostPetsForm/?pet=${e.target.dataset.id}`;
+                    }
+                },
                 async getLostPets() {
-                    axios.defaults.baseURL = "http://187.223.180.252:8080/api";
-                    axios.defaults.headers.common["Authorization"] = this.datos.token;
-
-                    let {data = []} = await axios({
+                    let { data = [] } = await axios({
                         method: "get",
                         url: "/lostPets",
                         headers: {
@@ -135,10 +150,33 @@
 
                     this.lostPets = data;
                     console.log(data);
+                },
+                async deleteLostPet(e) {
+                    console.log(e.target.dataset.id);
+                    let { data = [] } = await axios({
+                        method: "DELETE",
+                        url: `/DeleteLostPet/${e.target.dataset.id}`,
+                        headers: {
+                            Authorization: `${this.datos.token}`
+                        }
+                    }).then(e => {
+                        Swal.fire({
+                            icon: 'success',
+                            title: "¡Publicacion eliminada!",
+                            showConfirmButton: true,
+                            timer: 1500
+                        }).then(() => {
+                            window.location.reload();
+                        })
+                    })
+                    // console.log(data);
                 }
 
             },
             async mounted() {
+                axios.defaults.baseURL = "http://187.223.180.252:8080/api";
+                axios.defaults.headers.common["Authorization"] = this.datos.token;
+
                 let wrapper = document.querySelector("mypetsos-wrapper");
                 await this.getLostPets();
 
