--- a/app/petForAdoption/index.html
+++ b/app/petForAdoption/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -7,50 +7,101 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SOS MyPet</title>
     <link rel="stylesheet" href="../../src/CSS/base.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../src/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../src/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../src/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../../src/favicon/site.webmanifest">
+    <link rel="mask-icon" href="../../src/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <style>
-        /* CONTENT */
-        .list_container {
+        .container {
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+            padding: 30px 5px 0;
+        }
+
+        .petForAdoptionList {
             display: grid;
-            grid-template-columns: repeat( auto-fit, minmax(300px, 1fr) );
-            gap: 2em;
-            padding-top: 20px;
-            position: relative;
-            justify-content: center;
-            /* padding-bottom: 20px; */
-
-            min-height: calc(100vh - 15em);
+            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+            justify-content: space-between;
+            gap: 30px;
+            /* row-gap: 10px; */
         }
 
-        .pet_card {
+        .petForAdoptionCard {
             position: relative;
             width: 100%;
-            height: 30em;
-            border-radius: 15px;
-            /* overflow: hidden; */
-            cursor: pointer;
-            background-size: cover;
-            /* background-color: red; */
-            box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.2);
-
+            /* height: ; */
+            border-radius: 20px;
+            padding: 15px;
+            box-shadow: 0 0px 4px 1px rgba(85 74 39 / 30%);
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
         }
 
-        .pet_card::before {
-            content: '';
+        .petForAdoptionCard img {
             width: 100%;
-            height: 100%;
-            border-radius: 15px;
+            height: 180px;
+            object-fit: cover;
+            border-radius: 10px;
+            box-shadow: 0 2px 4px 1px rgba(85 74 39 / 25%);
 
-            position: absolute;
-            background: linear-gradient(transparent, black);
         }
 
-        .pet_info {
+        .petForAdoptionInfo {
+            font-size: 1.5em;
+        }
+
+        .title_pet {
+            font-size: 1.6em;
+        }
+
+        .petBreef {
+            font-weight: 600;
+            font-size: 1.2em;
+            color: #757575;
+        }
+
+        .deletePet {
+            width: 2em;
+            height: 2em;
             color: white;
+            font-weight: bold;
+            font-family: "Montserrat";
+            right: 20px;
+            top: 20px;
+            border-radius: 50%;
+            background-color: white;
+            border: none;
             font-size: 2em;
             position: absolute;
-            bottom: 15px;
-            left: 15px;
-            text-decoration: none;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        } 
+        .deletePet svg {
+            cursor: pointer;
+            fill: #F2415B;
+        }
+
+        .favorites_list {
+            padding-left: 10px;
+            padding-bottom: 20px;
+            /* font-size: 3.5em; */
+            display: flex;
+            gap: 20px;
+            overflow-x: scroll;
+        }
+
+        .favorites_list {
+            display: flex;
+        }
+        .favorites .petForAdoptionCard {
+            width: 400px;
         }
 
         .add-btn {
@@ -69,20 +120,6 @@
             outline: 2px solid var(--secondary-color);
             right: 50px;
         }
-
-        .deleteBtn {
-            position: absolute;
-            right: 0px;
-            top: -10px;
-            width: 35px;
-            height: 35px;
-            background-color: #ef4d21;
-            color: white;
-            border-radius: 50%;
-            border: none;
-            font-size: 2em;
-            font-weight: 600;
-        }
     </style>
 </head>
 
@@ -90,16 +127,57 @@
     <div id="app" v-cloak>
 
         <mypetsos-wrapper title="Adopciones" route="petForAdoption">
-            <div class="list_container">
-                <a :href="`../lostPetsForm/?pet=${pet.id}`" :style="`background-image: url(${baseURL}${pet.imagePath});`" v-for="pet in lostPets" class="pet_card">
-                    <div class="pet_info">
-                        <h3>{{pet.name}}</h3>
-                        <p>{{pet.petBreed.name}}</p>
+            <div class="container">
+                <!-- <div v-if="favorites.length" class="favorites">
+                    <h2 style="font-size: 3.5em;">Favoritos</h2>
+                    <div class="favorites_list">
+                        <div v-for="pet in favorites" class="petForAdoptionCard">
+                            <a href="#">
+                                <img :src="`${this.baseURL}${pet.imagePath}`" alt="">
+                            </a>
+    
+                            <div class="petForAdoptionInfo">
+                                <h2 class="title_pet">
+                                    {{pet.name}}
+                                </h2>
+                                <p class="petBreef">
+                                    {{pet.petBreed.name}}
+                                </p>
+                            </div>
+    
+                            <button @click="" class="deletePet"><svg xmlns="http://www.w3.org/2000/svg" height="1em"
+                                    viewBox="0 0 448 512">
+                                    <path
+                                        d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
+                                </svg></button>
+                        </div>     
                     </div>
-                    <button v-if="datos.curp == pet.user.curp" class="deleteBtn">x</button>
-                </a>
+                </div> -->
+                <div class="petForAdoptionList">
+                    <div v-for="pet in petForAdoption" class="petForAdoptionCard">
+                        <a :href="`../petForAdoptionForm/?pet=${pet.id}`">
+                            <img :src="`${this.baseURL}${pet.imagePath}`" alt="">
+                        </a>
 
-                <a class="add-btn" href="../lostPetsForm/index.html">Subir publicación</a>
+                        <div class="petForAdoptionInfo">
+                            <h2 class="title_pet">
+                                {{pet.name}}
+                            </h2>
+                            <p class="petBreef">
+                                {{pet.petBreed.name}}
+                            </p>
+                        </div>
+
+                        <button :data-id="`${pet.id}`" v-if="datos.role_id == 1" @click="deletePetForAdoption" class="deletePet"><svg xmlns="http://www.w3.org/2000/svg" height="1em"
+                                viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                                <path
+                                    d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z" />
+                            </svg></button>
+                    </div>
+
+                </div>
+
+                <a class="add-btn" href="../petForAdoptionForm/">Subir publicación</a>
             </div>
         </mypetsos-wrapper>
     </div>
@@ -107,6 +185,7 @@
     <script src="../../src/JS/chart.js"></script>
     <script src="../../src/JS/axios.min.js"></script>
     <script src="../../src/JS/Vue.js"></script>
+    <script src="../../src/JS/sweetalert.js"></script>
     <script type="module" src="../../Template/wrapper.js"></script>
     <script>
         // axios.defaults.baseURL = 'http://192.168.1.121:8080';
@@ -116,31 +195,53 @@
             data() {
                 return {
                     datos: JSON.parse(window.localStorage.getItem('usuario')),
-                    lostPets: [],
+                    petForAdoption: [],
+                    // favorites: [],
                     baseURL: "http://187.223.180.252:8080"
                 }
             },
             methods: {
-                async getLostPets() {
-                    axios.defaults.baseURL = "http://187.223.180.252:8080/api";
-                    axios.defaults.headers.common["Authorization"] = this.datos.token;
-
-                    let {data = []} = await axios({
+                async getPetForAdoption() {
+                    let { data = [] } = await axios({
                         method: "get",
-                        url: "/lostPets",
+                        url: "/PetForAdoption",
                         headers: {
                             Authorization: `${this.datos.token}`
                         }
                     })
 
-                    this.lostPets = data;
                     console.log(data);
+                    this.petForAdoption = data;
+
+                },
+                async deletePetForAdoption(e) {
+                    console.log(e.target.dataset.id);
+                    let { data = [] } = await axios({
+                        method: "DELETE",
+                        url: `/DeletePetForAdoption/${e.target.dataset.id}`,
+                        headers: {
+                            Authorization: `${this.datos.token}`
+                        }
+                    }).then(e => {
+                        Swal.fire({
+                            icon: 'success',
+                            title: "¡Publicacion eliminada!",
+                            showConfirmButton: true,
+                            timer: 1500
+                        }).then(() => {
+                            window.location.reload();
+                        })
+                    })
+                    // console.log(data);
                 }
 
             },
             async mounted() {
+                axios.defaults.baseURL = "http://187.223.180.252:8080/api";
+                axios.defaults.headers.common["Authorization"] = this.datos.token;
+
                 let wrapper = document.querySelector("mypetsos-wrapper");
-                await this.getLostPets();
+                await this.getPetForAdoption();
 
                 wrapper.loading = false;
             }
