--- a/app/veterinary/index.html
+++ b/app/veterinary/index.html
@@ -8,6 +8,13 @@
     <title>SOS MyPet</title>
     <link rel="stylesheet" href="../../src/CSS/base.css">
     <link rel="stylesheet" href="../../src/CSS/inputs.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="../../src/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../src/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../src/favicon/favicon-16x16.png">
+    <link rel="manifest" href="../../src/favicon/site.webmanifest">
+    <link rel="mask-icon" href="../../src/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <style>
         .container {
             margin-top: 20px;
@@ -97,7 +104,6 @@
             font-weight: 600;
             gap: 10px;
         }
-
     </style>
 </head>
 
@@ -106,20 +112,19 @@
 
         <mypetsos-wrapper title="Veterinarias" route="veterinary">
             <div class="container">
-                <iframe
-                    :src="veterinary[currentIndex].url"
-                    width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe :src="veterinary[currentIndex].url" width="100%" height="100%" style="border:0;"
+                    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
                 <div class="right_side">
                     <div class="input_text">
                         <!-- <label for="email">Correo electrónico</label> -->
-                        <input @input="onInput" title="search" autocomplete="no" placeholder="Buscar veterinaria" type="text"
-                            name="search" id="search" required>
+                        <input @input="onInput" title="search" autocomplete="no" placeholder="Buscar veterinaria"
+                            type="text" name="search" id="search" required>
                     </div>
                     <div class="veterinary_list">
 
-                        <div v-for="(i, index) in filterVeterinary()" :data-index="index" @click="changeCurrentIndex" class="veterinary">
+                        <div v-for="(i, index) in filterVeterinary()" :data-index="index" @click="changeCurrentIndex"
+                            class="veterinary">
                             <img :src="`../../src/img/${i.image}`" alt="">
                             <div class="veterinary_info">
                                 <p class="veterinary_name">{{i.name}}</p>
@@ -144,6 +149,7 @@
     <script src="../../src/JS/chart.js"></script>
     <script src="../../src/JS/axios.min.js"></script>
     <script src="../../src/JS/Vue.js"></script>
+    <script src="../../src/JS/sweetalert.js"></script>
     <script type="module" src="../../Template/wrapper.js"></script>
     <script>
         // axios.defaults.baseURL = 'http://192.168.1.121:8080';
@@ -178,29 +184,36 @@
                             phone: "612 104 4379",
                             image: "clinic.jpg",
                             url: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3642.1542590773906!2d-110.3195209!3d24.0960701!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86afd2c803064dfb%3A0xaf0e37199cf9e75c!2sAnimal%20Clinic.!5e0!3m2!1ses-419!2smx!4v1686683191590!5m2!1ses-419!2smx"
+                        },
+                        {
+                            name: "Hospital Veterinario Dogtor House",
+                            phone: "+52 612 122 1623",
+                            image: "clinic.jpg",
+                            url: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3642.1542590773906!2d-110.3195209!3d24.0960701!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86afd2c803064dfb%3A0xaf0e37199cf9e75c!2sAnimal%20Clinic.!5e0!3m2!1ses-419!2smx!4v1686683191590!5m2!1ses-419!2smx"
                         }
+                        
                     ],
-                    currentIndex: 0,
+                currentIndex: 0,
                     baseURL: "http://192.168.1.121:8080"
-                }
-            },
-            methods: {
-                changeCurrentIndex(e) {
-                    this.currentIndex = e.currentTarget.dataset.index
-                },
-                onInput(e) {
-                    this.filter = e.target.value.toLowerCase();
-                },
-                filterVeterinary() {
-                    return this.filter ? this.veterinary.filter(e => e.name.trim().toLowerCase().includes(this.filter.trim())) : this.veterinary;
-                }
-            },
-            async mounted() {
-                let wrapper = document.querySelector("mypetsos-wrapper");
-
-
-                wrapper.loading = false;
             }
+        },
+            methods: {
+            changeCurrentIndex(e) {
+                this.currentIndex = e.currentTarget.dataset.index
+            },
+            onInput(e) {
+                this.filter = e.target.value.toLowerCase();
+            },
+            filterVeterinary() {
+                return this.filter ? this.veterinary.filter(e => e.name.trim().toLowerCase().includes(this.filter.trim())) : this.veterinary;
+            }
+        },
+            async mounted() {
+            let wrapper = document.querySelector("mypetsos-wrapper");
+
+
+            wrapper.loading = false;
+        }
         }).mount('#app')
 
 
