--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="./src/CSS/base.css">
     <link rel="stylesheet" href="./src/CSS/login.css">
     <link rel="stylesheet" href="./src/CSS/inputs.css">
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 </head>
 
 <body>
@@ -72,10 +71,11 @@
     </div>
 
     <script src="./src/JS/sweetalert.js"></script>
-    <script src="src/JS/axios.min.js"></script>
+    <script src="./src/JS/axios.min.js"></script>
 
     <script>
-        const BASE_URL = "http://192.168.1.121:8080/api"
+        const BASE_URL = "http://187.223.180.252:8080/api"
+        if(window.localStorage.getItem("usuario")) window.location.href = "/app/lostpets";
 
         function signIn(e) {
             const submit_container = document.querySelector(".submit_container");
@@ -107,12 +107,12 @@
                         showConfirmButton: true,
                         timer: 1500
                     }).then(() => {
-                        window.location = "/app/statistics"
+                        window.location = "/app/lostpets"
                     })
 
                     submit_container.classList.remove("loading");
                     e.submitter.disabled = false;
-                }).catch(({ response: res = [] }) => {
+                }).catch(({response: res = []}) => {
                     if (res) {
                         let { data } = res;
 
@@ -128,6 +128,8 @@
 
                         return;
                     }
+
+                    console.log(res);
 
                     Swal.fire({
                         icon: 'error',
